- Added com.nativelibs4java.opencl.HardwareReport (with main method) : outputs html report with devices stats
- JAR is now self-sufficient (includes JNA + JNAerator's runtime classes)
- Rationalized naming of all enums : CL_ENTITY_ATTRIBUTE_SOME_VALUE = CLEntity.Attribute.SomeValue (enum item SomeValue in enum Attribute in class CLEntity)
- Added image format support query
- Added CLContext.getSupportedImageFormats + CLImageFormat and associated enums
- Added CLImage2D, CLImage3D and corresponding creation methods in CLContext + all image info getters
- Added CLBuffer.copyTo that wraps clEnqueueCopyBuffer
- CLMem changed a lot : now buffers are created as subclass CLBuffer, deprecated many methods, now should only use CLBuffer.(blocking|enqueue)(Write|Read|Map) + unmap + MapFlags enum

Version 1.0-beta-1

- New CLPlatform class (~ OpenCL implementation) which now hosts the list*Devices(...) methods 
- Entry point of library is now OpenCL4Java.listPlatforms() 
- New CLEvent class, returned by all enqueue* methods (with methods waitFor, invokeUponCompletion...) 
- Better separation between blocking and non blocking calls 
- New CLSampler class supported as argument of CLKernel 
- Many info getters with typesafe enums / enum sets in classes CLDevice, CLPlatform, CLKernel... 
- Much more complete JavaDoc : http://nativelibs4java.sourceforge.net/sites/OpenCL4Java/apidocs/ 
- Example & benchmark classes became JUnit tests and moved here : http://code.google.com/p/nativelibs4java/source/browse/#svn/trunk/lib... 

While this release is rather OpenCL4Java-focused, ScalaCL also got its bunch of enhancements : 
- Added scalar variables IntVar, FloatVar, ShortVar... 
- 'local' keyword can be added to variables so they're local to the programs : val x = FloatVar local 
- Added many OpenCL math functions 
- Added methods ArrayVar.write(Range), ArrayVar.write(Seq) 
- Various bugfixes 
