@@ -14,7 +14,7 @@ import java.lang.reflect.Method;
 import java.util.*;
 
 /**
- *
+ * Small program that outputs html reports about the information returned by OpenCL for each device.
  * @author ochafik
  */
 public class HardwareReport {
