@@ -1,5 +1,6 @@
 /**
  * Object-oriented wrappers around the OpenCL API, with methods that help creating and managing OpenCL applications.
+ * @see OpenCL4Java
  * @see com.nativelibs4java.opencl.library
  */
 package com.nativelibs4java.opencl;
